# polygrid

./: CONTRIBUTING.md  Cargo.toml  README.md  Shuttle.toml  justfile
polygrid/: Cargo.toml
polygrid-app/: Cargo.toml  index.html
polygrid-app/assets/: sw.js
polygrid-app/src/: app.rs  main.rs
polygrid-editor/: Cargo.toml
polygrid-website/: Cargo.toml
polygrid-website/src/: main.rs
polygrid-website/static/css/: style.css
polygrid-website/static/js/: polygrid_editor.js
polygrid-website/templates/: 404.html  base.html  editor.html  index.html
scripts/: prepare_dist_sw_js.py
