[package]
name = "polygrid-editor"
version = "0.1.0"
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
bevy_egui = "0.22"
rand = { version = "0.8" }
wasm-bindgen = "0.2"

[patch.crates-io]
#bevy_egui = { path = "../bevy_egui" }
