[package]
name = "polygrid-website"
version = "0.1.0"
edition = "2021"
description = "webserver for polygrid"
homepage = "https://www.polygrid.app/"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/plabayo/polygrid"

[dependencies]
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.3"
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
shuttle-axum = "0.29"
shuttle-runtime = "0.29"
tokio = "1.28"
tower = { version = "0.4", features = ["tracing"] }
tower-http = { version = "0.4", features = ["fs", "trace", "compression-full", "normalize-path"] }
